fixed horizontal scroll bug

--- a/index.css
+++ b/index.css
@@ -2,11 +2,9 @@ html,
 body {
     background-color: #F8F3EC;
     height: fit-content;
-    width: 100%;
 }
 
 #our-cafe {
-    width: 100%;
     background-image: url("img/index/background3.png");
     background-size: 100% 90%;
     background-repeat: no-repeat;
@@ -15,7 +13,6 @@ body {
 }
 
 #our-cafe h2 {
-    width: 100%;
     font-size: 64px;
     margin-left: 50%;
     padding: fit-content;
@@ -25,7 +22,6 @@ body {
 }
 
 #our-cafe-img-container {
-    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -49,7 +45,6 @@ body {
 
 .menu-items p {
     font-size: 36px;
-    width: 100%;
     margin: 0;
     text-align: center;
 }
